Inicie la implementación de React Router DOM

--- a/index.html
+++ b/index.html
@@ -11,3 +11,16 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<!--
+Nota al grupo:
+ Supongo que estás acá porque no sabes donde está el código de la aplicación.
+ Si es así, el código de la aplicación está en el archivo src/app.jsx.
+ Los componentes que se muestran en la aplicación están en src/components.
+ Las paginas que se muestran en la aplicación están en src/pages.
+
+ 
+ Acá no toqués nada
+ Tampoco toques main.jsx 
+ Saludos formulísticos 
+-->
