Migro de otro repo a este, está hecho en React con Typescript para la compatibilidad con Shadcn/ui.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
-<!doctype html>
-<html lang="es">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Descalifica2</title>
+    <title>descalifica2</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
-<!--
-Nota al grupo:
- Supongo que estás acá porque no sabes donde está el código de la aplicación.
- Si es así, el código de la aplicación está en el archivo src/app.jsx.
- Los componentes que se muestran en la aplicación están en src/components.
- Las paginas que se muestran en la aplicación están en src/pages.
-
- 
- Acá no toqués nada
- Tampoco toques main.jsx 
- Saludos formulísticos 
--->
